few internal tweaks